--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,6 +29,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
+      - name: Allow Executing Maven Wrapper
+        run: chmod a+x ./mvnw
+
       - name: Build with Maven
         run: ./mvnw clean package -DskipTests
 
