--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,7 +33,7 @@ jobs:
         run: chmod a+x ./mvnw
 
       - name: Build with Maven
-        run: ./mvnw clean package -DskipTests -DfinalName=lets-commit-backend-indexer
+        run: ./mvnw clean package -DskipTests -Djar.finalName=lets-commit-backend-indexer
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
